longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-authentik-auth@kubernetescrd
spec:
  rules:
    - host: longhorn.internal.luckywatcher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.internal.luckywatcher.dev
      secretName: longhorn-internal-luckywatcher-dev-tls
